--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.25",
     "@types/node": "^22.19.3",
